--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ bower.json
 # Ignore node_modules
 node_modules/
 Rails path/my_first_rails_app/tmp/
+Rails path/micro-reddit-assignment/tmp/
 # Ignore precompiled javascript packs
 /public/packs
 /public/packs-test
